salesforce/force-app/main/default/objects/DetectorOverride__c/DetectorOverride__c.object-meta.xml
<CustomObject>
    <description>Per-org override of a Detector__mdt or CustomDetector__mdt severity / on-off. Phase 24q — lets a customer mark TR-001 as "Not Applicable" for an org that uses an external tax engine, or demote PBC-001 to Info for an org that doesn't use Salesforce Billing. Scan-time resolution: override wins over catalog default.</description>
    <label>Detector Override</label>
    <nameField>
        <displayFormat>OVR-{00000}</displayFormat>
        <label>Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detector Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>