salesforce/force-app/main/default/objects/DetectorOverride__c/fields/ConnectedOrg__c.field-meta.xml
<CustomField>
    <fullName>ConnectedOrg__c</fullName>
    <label>Connected Org</label>
    <description>The org this override applies to. Master-detail so overrides cascade with org lifecycle.</description>
    <referenceTo>ConnectedOrg__c</referenceTo>
    <relationshipLabel>Detector Overrides</relationshipLabel>
    <relationshipName>DetectorOverrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>