salesforce/force-app/main/default/objects/DetectorOverride__c/fields/DetectorId__c.field-meta.xml
<CustomField>
    <fullName>DetectorId__c</fullName>
    <label>Detector Id</label>
    <description>Detector ID this override targets (e.g. TR-001, ARM-008). Matches Detector__mdt.DetectorId__c.</description>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>