salesforce/force-app/main/default/objects/DetectorOverride__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Active</label>
    <description>Uncheck to disable this override without deleting the record (preserves notes + history).</description>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>