salesforce/force-app/main/default/objects/DetectorOverride__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Free text — why this override exists. "We use Avalara for tax", "Don't use SF Billing", etc. Surfaced on the override admin UI.</description>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>