salesforce/force-app/main/default/objects/DetectorOverride__c/fields/SeverityOverride__c.field-meta.xml
<CustomField>
    <fullName>SeverityOverride__c</fullName>
    <label>Severity Override</label>
    <description>The severity to use for this detector in this org. "Not Applicable" tells the scanner to skip the detector entirely — no findings created. Catalog default is used if no record exists.</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <label>Not Applicable (skip detector)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>